# darkengine

./: .gitignore  CMakeLists.txt  README.md
dependencies/MindShake/: CMakeLists.txt  mindshake.natvis  mindshake_flags.cmake
dependencies/MindShake/Common/Core/: configCoreLib.h  platform.h  printfAux.h  stringAux.h
dependencies/MindShake/Common/Core/console/: msColors.h
dependencies/MindShake/Common/Core/containers/: TVector.h
dependencies/MindShake/Common/Kernel/mt/: CMiniCriticalSection.h
dependencies/MindShake/Common/Math/: constants.h  math_funcs.h
dependencies/MindShake/Core/log/: CLogConsole.cpp  CLogConsole.h  CLogFile.cpp  CLogFile.h  CLogSystem.cpp  CLogSystem.h  CLogger.cpp  CLogger.h  log.h  logEnums.h
dependencies/MindShake/Core/memory/: memory.cpp  memory.h
dependencies/MindShake/Core/utils/: pathUtils.cpp  pathUtils.h
dependencies/MindShake/Kernel/timer/: CChronoTimer.cpp  CChronoTimer.h  sleep.cpp  sleep.h  sleep.mm
dependencies/MindShake/Math/random/: FastRand2.cpp  FastRand2.h
dependencies/MindShake/Math/types/: CMatrix2.cpp  CMatrix2.h  CMatrix3.cpp  CMatrix3.h  CMatrix4.cpp  CMatrix4_GL.h  CQuaternion.cpp  CQuaternion.h  CVector2.cpp  CVector2.h  CVector3.cpp  CVector3.h  CVector4.cpp  CVector4.h
dependencies/minifb/: README.md
dependencies/minifb/include/: MiniFB.h  MiniFB_enums.h
dependencies/minifb/src/: MiniFB_common.c  MiniFB_internal.h
dependencies/minifb/src/macosx/: MacMiniFB.m
dependencies/minifb/src/x11/: X11MiniFB.c
dependencies/minifb/tests/: input_events.c  input_events_cpp.cpp  multiple_windows.c  noise.c
src/asteroids/: Asteroids.cpp  Asteroids.h  CRendererAsteroids.cpp  CRendererAsteroids.h  Player.cpp  Player.h  main.cpp
src/engine/: CCamera.cpp  CCamera.h  CColor.h  CDrawer.cpp  CDrawer.h  CLight.h  CMesh.cpp  CMesh.h  CRenderer.cpp  CRenderer.h  CSceneManager.cpp  CSceneManager.h  CSceneNode.cpp  CSceneNode.h  CSceneNode.h.orig  CWindow.cpp  CWindow.h  engineEnums.h
src/exercise1/: Stars.cpp  Stars.h  main.cpp
